--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 body {
     background-color: #eeeeee;
     text-align: center;
-    font-family: Roboto;
+    font-family: RobotoThin;
     font-weight: 100;
 }
 
